# ese5190-2022-lab2b-esp

./: README.md
lab/01_registers/: 01_registers.c  README.md
lab/02_repl/: README.md
lab/02_repl/P2-repl/P2-repl/: CMakeLists.txt  REPL.c  desktop.ini  neopixel.c
lab/03_sequencer/: README.md  record_boot.c
lab/03_sequencer/Part-1/: CMakeLists.txt  README.md
lab/03_sequencer/Part-2/: CMakeLists.txt  record_boot.c  serial_python.py
lab/03_sequencer/Part-3/: CMakeLists.txt  python_serial.py  record_boot.c  sequencer.txt
lab/04_slow_motion/: CMakeLists.txt  README.md  sequencer.txt
lab/04_slow_motion/Code_slow_motion/: slow_motion_c.c  slow_motion_py.py
lab/05_i2c_traffic/: README.md
lab/06_pioscope/: README.md
lab/06_pioscope/06_pioscope/06_pioscope/: CMakeLists.txt  pioscope.c
lab/07_pio_sequencer/: README.md
lab/07_pio_sequencer/07_pio_sequencer/: 07_pio_sequencer.c  CMakeLists.txt  python_serial.py  ws2812.pio
lab/08_adps_protocol/: README.md
lab/08_adps_protocol/08_apds_protocol/: CMakeLists.txt  main.c  pio_i2c.c
lab/09_lab_on_a_chip/: README.md
lab/09_lab_on_a_chip/lab_on_chip_code/: CMakeLists.txt  i2c.pio  main.c  pio_i2c.c
lab/10_protoboard/: README.md
lab/10_protoboard/Board_sequencer/: Board_Led_Blink_Sequencer.c  CMakeLists.txt  README.md  rp2040_serial_macros.py  sequencer.txt
